# dymad-dev

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_maps.rst  api_ref.rst  conf.py  examples.rst  index.rst  roadmap.rst  theory.rst
docs/_ext/: dict_keys.py
docs/theory/: architecture.ipynb  figures.ipynb
examples/1d_oscillator/: lti_kbf_cv.yaml  lti_model.yaml  part1.ipynb  part2.ipynb  part3.ipynb  part4.ipynb  part5.ipynb
examples/2d_koopman/: part1.ipynb  part2.ipynb  part3.ipynb
examples/controllability/: funcs.py  kp_data_ctrl.yaml  kp_model.yaml  kp_model_ctrl.yaml  part_1.ipynb  part_2.ipynb  pendulum.yaml
examples/double_pendulum/: dp_kbf_node.yaml  dp_kbf_wf.yaml  dp_ldm_node.yaml  dp_ldm_wf.yaml
examples/kernel_l63/: main.ipynb
examples/kernel_s1/: ker_data.yaml  main.ipynb
examples/linear_graph/: ltg_kbf_wf.yaml  main.ipynb  part1.ipynb  (+1 more)
tests/: README.md  conftest.py  ker_model_auto.yaml  ker_model_ctrl.yaml  lti_data_par.yaml  sa_data.yaml  test_assert_di.py  test_assert_dm.py  test_assert_grad.py  test_assert_graph.py  test_assert_jax.py  test_assert_krr.py  test_assert_krr_tan.py  test_assert_linalg.py  test_assert_loss.py  test_assert_manifold.py  test_assert_resolvent.py  test_assert_trajmgr.py  test_assert_trajmgr_graph.py  test_assert_trans_lift.py  test_assert_trans_mode.py  test_assert_trans_ndr.py  test_assert_transform.py  test_workflow_ker_auto.py  test_workflow_ker_ctrl.py  test_workflow_kp.py  test_workflow_ltg.py  test_workflow_ltga.py  test_workflow_lti.py  test_workflow_sa_lti.py  test_workflow_sample.py
(+197 files in other folders)
