[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "dymad"
version         = "0.1.1"
description     = "Dynamics Modeling and Analysis via Data"
authors         = [{name = "APUS Lab @ PSU"}]
readme          = "README.md"
requires-python = ">=3.12"
dependencies = [
  "imageio>=2.36.0",
  "numpy>=2.0",
  "matplotlib>=3.9",
  "pyyaml>=6.0",
  "scikit-learn>=1.5.2",
  "scipy>=1.14",
  "torch>=2.5",
  "torchdiffeq>=0.2.5",
  "torch-geometric>=2.6"
]

[project.optional-dependencies]
docs = [
  # keep this list short; matches docs/requirements.txt
  "sphinx>=7",
  "furo",
  "myst-parser",            # optional: Markdown support
  "myst-nb>=1.0",
  "sphinx-autodoc-typehints"
]
test = [
  "pytest>=8",
]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",            # show reasons for skips/xpasses
  "--strict-markers",
  "--maxfail=0",
  "-q"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
xfail_strict = true
log_cli = true
log_level = "INFO"

markers = [
  "slow: marks tests as slow"
]
